--- a/Crypto Manager 02/View/Base.lproj/Main.storyboard
+++ b/Crypto Manager 02/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nsb-fJ-I8f">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,35 +8,140 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Crypto List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Crypto_Manager_02" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CryptoListViewController" customModule="Crypto_Manager_02" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9b-Lw-WfE">
-                                <rect key="frame" x="185.5" y="304" width="43.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UrR-FQ-pZx">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="97" id="GvY-Qv-N17" customClass="CryptoTableViewCell" customModule="Crypto_Manager_02" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="97"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GvY-Qv-N17" id="uFP-Ur-wlF">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="97"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crypto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMk-nx-dI2">
+                                                    <rect key="frame" x="9" y="11" width="193" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="193" id="tUN-xe-E4a"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrv-BY-mTC">
+                                                    <rect key="frame" x="313" y="11" width="89" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="89" id="R0b-XF-Cce"/>
+                                                        <constraint firstAttribute="height" constant="24" id="ilX-EL-MyD"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent_1h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ypQ-dv-QOx">
+                                                    <rect key="frame" x="259" y="38" width="143" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent_7days" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k2w-qy-5oE">
+                                                    <rect key="frame" x="259" y="67" width="143" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="lV1-Vb-gPp"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent_24h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MuY-rZ-WnU">
+                                                    <rect key="frame" x="259" y="53" width="143" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7he-z7-5Zp">
+                                                    <rect key="frame" x="29" y="53" width="38" height="33"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="33" id="5QT-Nf-hTi"/>
+                                                        <constraint firstAttribute="width" constant="38" id="z67-6z-0Zw"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mrv-BY-mTC" firstAttribute="trailing" secondItem="ypQ-dv-QOx" secondAttribute="trailing" id="5Ro-lB-kvh"/>
+                                                <constraint firstItem="MuY-rZ-WnU" firstAttribute="top" secondItem="7he-z7-5Zp" secondAttribute="top" id="BBQ-sB-yy4"/>
+                                                <constraint firstItem="7he-z7-5Zp" firstAttribute="bottom" secondItem="uFP-Ur-wlF" secondAttribute="bottomMargin" id="Cb2-Vx-oXJ"/>
+                                                <constraint firstItem="k2w-qy-5oE" firstAttribute="trailing" secondItem="MuY-rZ-WnU" secondAttribute="trailing" id="DWT-GG-Zcw"/>
+                                                <constraint firstItem="ypQ-dv-QOx" firstAttribute="top" secondItem="mrv-BY-mTC" secondAttribute="bottom" constant="3" id="GU6-75-4XW"/>
+                                                <constraint firstItem="HMk-nx-dI2" firstAttribute="top" secondItem="uFP-Ur-wlF" secondAttribute="topMargin" id="QPk-L5-XHn"/>
+                                                <constraint firstItem="MuY-rZ-WnU" firstAttribute="leading" secondItem="ypQ-dv-QOx" secondAttribute="leading" id="Vmk-As-9cE"/>
+                                                <constraint firstItem="ypQ-dv-QOx" firstAttribute="leading" secondItem="HMk-nx-dI2" secondAttribute="trailing" constant="57" id="WeC-rd-wOH"/>
+                                                <constraint firstItem="k2w-qy-5oE" firstAttribute="top" secondItem="ypQ-dv-QOx" secondAttribute="bottom" constant="8" id="YmB-N1-yLe"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="mrv-BY-mTC" secondAttribute="trailing" constant="-8" id="Zmr-2u-fwo"/>
+                                                <constraint firstItem="k2w-qy-5oE" firstAttribute="trailing" secondItem="ypQ-dv-QOx" secondAttribute="trailing" id="axG-TX-pYJ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="k2w-qy-5oE" secondAttribute="bottom" constant="-2" id="cfF-mV-c8U"/>
+                                                <constraint firstItem="HMk-nx-dI2" firstAttribute="leading" secondItem="uFP-Ur-wlF" secondAttribute="leadingMargin" constant="-11" id="cqB-uN-Aer"/>
+                                                <constraint firstItem="mrv-BY-mTC" firstAttribute="top" secondItem="HMk-nx-dI2" secondAttribute="top" id="gDD-AG-3uK"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="MuY-rZ-WnU" secondAttribute="bottom" constant="12" id="kRK-dU-IJ6"/>
+                                                <constraint firstItem="7he-z7-5Zp" firstAttribute="leading" secondItem="uFP-Ur-wlF" secondAttribute="leadingMargin" constant="9" id="lPF-aZ-ARC"/>
+                                                <constraint firstItem="k2w-qy-5oE" firstAttribute="leading" secondItem="MuY-rZ-WnU" secondAttribute="leading" id="xy8-Rr-1fZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iconCrypto" destination="7he-z7-5Zp" id="CSU-B1-UM3"/>
+                                            <outlet property="nameCrypto" destination="HMk-nx-dI2" id="1WE-34-ljY"/>
+                                            <outlet property="percent_1h" destination="ypQ-dv-QOx" id="OoK-gP-bKT"/>
+                                            <outlet property="percent_24h" destination="MuY-rZ-WnU" id="8OH-qd-PDh"/>
+                                            <outlet property="percent_7day" destination="k2w-qy-5oE" id="YXB-lU-je4"/>
+                                            <outlet property="priceCrypto" destination="mrv-BY-mTC" id="tv2-Ey-6Eq"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="c9b-Lw-WfE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="365-JQ-yF3"/>
-                            <constraint firstItem="c9b-Lw-WfE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="260" id="ja3-9W-b3F"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="UrR-FQ-pZx" secondAttribute="bottom" constant="-34" id="Dhj-bF-Noo"/>
+                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FC4-7L-o1G"/>
+                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rjF-Qf-NGL"/>
+                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tXd-Eb-spE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="HCR-pc-Tc3"/>
                     <connections>
-                        <outlet property="priceLabel" destination="c9b-Lw-WfE" id="sIr-aJ-u5a"/>
+                        <outlet property="tableView" destination="UrR-FQ-pZx" id="juZ-N7-FBb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="115"/>
+            <point key="canvasLocation" x="1042.0289855072465" y="114.50892857142857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="n89-iu-4Tc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nsb-fJ-I8f" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xcn-q2-CfS">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9OB-Ju-HhO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s9J-fk-W8E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="114.50892857142857"/>
         </scene>
     </scenes>
 </document>
