--- a/Crypto Manager 02/View/Base.lproj/Main.storyboard
+++ b/Crypto Manager 02/View/Base.lproj/Main.storyboard
@@ -8,16 +8,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Crypto List View Controller-->
+        <!--Top 100 CryptoCurrency-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="CryptoListViewController" customModule="Crypto_Manager_02" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AllCryptoViewController" customModule="Crypto_Manager_02" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ari-rN-xlg">
+                                <rect key="frame" x="20" y="88" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UrR-FQ-pZx">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="130" width="414" height="717"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="97" id="GvY-Qv-N17" customClass="CryptoTableViewCell" customModule="Crypto_Manager_02" customModuleProvider="target">
@@ -33,7 +38,7 @@
                                                         <constraint firstAttribute="width" constant="193" id="tUN-xe-E4a"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrv-BY-mTC">
@@ -42,8 +47,8 @@
                                                         <constraint firstAttribute="width" constant="89" id="R0b-XF-Cce"/>
                                                         <constraint firstAttribute="height" constant="24" id="ilX-EL-MyD"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent_1h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ypQ-dv-QOx">
@@ -72,6 +77,7 @@
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="MuY-rZ-WnU" firstAttribute="leading" secondItem="7he-z7-5Zp" secondAttribute="trailing" constant="34" id="B3a-Rr-nDU"/>
                                                 <constraint firstItem="7he-z7-5Zp" firstAttribute="bottom" secondItem="uFP-Ur-wlF" secondAttribute="bottomMargin" id="Cb2-Vx-oXJ"/>
@@ -104,19 +110,32 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <tabBar contentMode="scaleToFill" id="CoO-uQ-OjD">
+                                <rect key="frame" x="0.0" y="847" width="414" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <tabBarItem systemItem="favorites" id="kFL-5h-PFt"/>
+                                    <tabBarItem systemItem="more" id="DJp-7e-Vz9"/>
+                                </items>
+                            </tabBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="UrR-FQ-pZx" secondAttribute="bottom" constant="-34" id="Dhj-bF-Noo"/>
-                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FC4-7L-o1G"/>
-                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rjF-Qf-NGL"/>
-                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tXd-Eb-spE"/>
+                            <constraint firstItem="CoO-uQ-OjD" firstAttribute="top" secondItem="UrR-FQ-pZx" secondAttribute="bottom" id="6Kp-nh-Yx9"/>
+                            <constraint firstItem="ari-rN-xlg" firstAttribute="centerX" secondItem="CoO-uQ-OjD" secondAttribute="centerX" id="83E-7c-6pj"/>
+                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="trailing" secondItem="CoO-uQ-OjD" secondAttribute="trailing" id="FJy-Uq-COb"/>
+                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="leading" secondItem="CoO-uQ-OjD" secondAttribute="leading" id="bUy-LQ-EZt"/>
+                            <constraint firstItem="ari-rN-xlg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fos-lD-bIx"/>
+                            <constraint firstItem="ari-rN-xlg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pZ9-Ga-imw"/>
+                            <constraint firstItem="UrR-FQ-pZx" firstAttribute="top" secondItem="ari-rN-xlg" secondAttribute="bottom" constant="8" id="zvY-Ee-atk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="HCR-pc-Tc3"/>
+                    <navigationItem key="navigationItem" title="Top 100 CryptoCurrency" id="HCR-pc-Tc3"/>
                     <connections>
-                        <outlet property="tableView" destination="UrR-FQ-pZx" id="juZ-N7-FBb"/>
+                        <outlet property="searchTextFeild" destination="ari-rN-xlg" id="X9M-xa-Qqy"/>
+                        <outlet property="tableView" destination="UrR-FQ-pZx" id="roB-cf-npK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
